# sesame

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
src/sesame/: __init__.py  __main__.py  cli.py  credentials.py  parser.py  runner.py
tests/: test_cli.py  test_credentials.py  test_parser.py  test_runner.py
